--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$OKHTTP_VERSION"
     implementation "com.squareup.okhttp3:logging-interceptor:$OKHTTP_VERSION"
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
+    implementation 'com.android.support:design:28.0.0'
 }
