--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:16.0.1'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+
+    //Glide
+    implementation('com.github.bumptech.glide:glide:4.9.0') {
+        annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+        exclude group: "com.android.support"
+    }
+
+    // Glide Transformations
+    implementation 'jp.wasabeef:glide-transformations:3.3.0'
+    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
 }
