--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,14 @@
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
         <activity android:name=".activities.HomeActivity"
             android:theme="@style/AppTheme.FullScreen">
+
+        </activity>
+        <activity android:name=".activities.Login"
+            android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".activities.Login">
-
         </activity>
         <activity android:name=".activities.MainActivity"></activity>
     </application>
