--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".activities.HomeActivity"
+        <activity
+            android:name=".activities.Event"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_event"
+            android:theme="@style/FullscreenTheme"></activity>
+        <activity
+            android:name=".activities.HomeActivity"
             android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.Login"
-            android:theme="@style/AppTheme.FullScreen">
-
-        </activity>
-        <activity android:name=".activities.MainActivity"></activity>
+        <activity
+            android:name=".activities.Login"
+            android:theme="@style/AppTheme.FullScreen"></activity>
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
