--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,14 +16,15 @@
             android:theme="@style/AppTheme.FullScreen">
 
         </activity>
-        <activity android:name=".activities.ActivityLogin"
-            android:theme="@style/AppTheme.FullScreen">
+        <activity android:name=".activities.LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.MainActivity"></activity>
+        <activity android:name=".activities.ESummitActivity" >
+
+        </activity>
     </application>
 
 </manifest>
