--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -36,6 +36,7 @@ dependencies {
     testImplementation("com.squareup.okhttp3:mockwebserver:$OKHTTP_VERSION")
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
 
     //Square
     implementation "com.squareup.retrofit2:retrofit:$RETROFIT_VERSION"
