--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+
         <activity android:name=".activities.Sponsors"
             android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter></activity>
-        <activity android:name=".activities.LoginActivity" >
-
+            </intent-filter>
         </activity>
 
+        <activity android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.FullScreen">
+        </activity>
 
         <activity
             android:name=".activities.Event"
             android:theme="@style/AppTheme.FullScreen">
         </activity>
+
         <activity
             android:name=".activities.HomeActivity"
             android:theme="@style/AppTheme.FullScreen">
@@ -36,7 +39,6 @@
         </activity>
 
         <activity android:name=".activities.ESummitActivity" >
-
         </activity>
     </application>
 </manifest>
