--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,24 +12,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen">
-
-        <activity android:name=".activities.Sponsors"
-            android:theme="@style/AppTheme.FullScreen">
-        </activity>
-
-        <activity android:name=".activities.LoginActivity"
-            android:theme="@style/AppTheme.FullScreen">
-        </activity>
-
+        <activity
+            android:name=".activities.AboutUs"
+            android:label="@string/title_activity_about_us"></activity>
+        <activity
+            android:name=".activities.Sponsors"
+            android:theme="@style/AppTheme.FullScreen"></activity>
+        <activity
+            android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.FullScreen"></activity>
         <activity
             android:name=".activities.Event"
             android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.HomeActivity"
             android:theme="@style/AppTheme.FullScreen">
@@ -37,9 +37,7 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activities.ESummitActivity" >
-        </activity>
-
+        <activity android:name=".activities.ESummitActivity"></activity>
     </application>
+
 </manifest>
