--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,6 @@
         android:theme="@style/AppTheme.FullScreen">
         <activity
             android:name=".activities.AboutUs"
-            android:theme="@style/AppTheme.FullScreen"></activity>
-        <activity
-            android:name=".activities.Sponsors"
-            android:theme="@style/AppTheme.FullScreen"></activity>
-        <activity
-            android:name=".activities.LoginActivity"
-            android:theme="@style/AppTheme.FullScreen"></activity>
-        <activity
-            android:name=".activities.Event"
             android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,6 +21,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".activities.Sponsors"
+            android:theme="@style/AppTheme.FullScreen">
+        </activity>
+
+        <activity
+            android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.FullScreen">
+        </activity>
+
+        <activity
+            android:name=".activities.Event"
+            android:theme="@style/AppTheme.FullScreen">
+        </activity>
+
         <activity
             android:name=".activities.HomeActivity"
             android:theme="@style/AppTheme.FullScreen">
@@ -37,7 +44,9 @@
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.ESummitActivity"></activity>
+
+        <activity android:name=".activities.ESummitActivity">
+        </activity>
     </application>
 
 </manifest>
