--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         </activity>
 
         <activity
-            android:name=".activities.LoginActivity"
+            android:name=".activities.Login"
             android:theme="@style/AppTheme.FullScreen"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
