--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,33 +13,33 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen">
         <activity
-            android:name=".activities.AboutUs"
+            android:name=".activities.AboutUsActivity"
             android:theme="@style/AppTheme.FullScreen">
         </activity>
 
         <activity
-            android:name=".activities.Sponsors"
+            android:name=".activities.SponsorsActivity"
             android:theme="@style/AppTheme.FullScreen">
         </activity>
 
         <activity
-            android:name=".activities.Login"
+            android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.FullScreen"
             android:windowSoftInputMode="adjustResize">
         </activity>
 
         <activity
-            android:name=".activities.Event"
-            android:theme="@style/AppTheme.FullScreen">
-        </activity>
-
-        <activity
-            android:name=".activities.Home"
+            android:name=".activities.EventActivity"
             android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".activities.HomeActivity"
+            android:theme="@style/AppTheme.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
