--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,10 @@ android {
     }
 }
 
+repositories {
+    mavenCentral()
+}
+
 dependencies {
     final RETROFIT_VERSION = '2.5.0'
     final OK_HTTP_VERSION = '3.14.2'
@@ -73,4 +77,7 @@ dependencies {
     // RxJava, RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+
+    //facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
