--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen">
 
-        <receiver android:name=".misc.NetworkChangeReciver"
+        <receiver android:name=".misc.NetworkChangeReceiver"
             android:enabled="true">
             <intent-filter >
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGED"/>
             </intent-filter>
         </receiver>
+
         <activity
             android:name=".activities.AboutUsActivity"
             android:theme="@style/AppTheme.FullScreen"
@@ -31,10 +32,28 @@
             android:screenOrientation="portrait">
         </activity>
 
+        <activity android:name="com.facebook.FacebookActivity"
+            android:configChanges=
+                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name" />
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="@string/fb_login_protocol_scheme" />
+            </intent-filter>
+        </activity>
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.FullScreen"
-            android:windowSoftInputMode="stateAlwaysVisible"
+            android:windowSoftInputMode="adjustResize"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
