--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,15 +7,15 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_ecell_round"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_ecell_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FullScreen">
 
         <receiver android:name=".misc.NetworkChangeReceiver"
             android:enabled="true">
-            <intent-filter >
+            <intent-filter>
                 <action android:name="android.net.conn.CONNECTIVITY_CHANGED"/>
             </intent-filter>
         </receiver>
@@ -32,28 +32,10 @@
             android:screenOrientation="portrait">
         </activity>
 
-        <activity android:name="com.facebook.FacebookActivity"
-            android:configChanges=
-                "keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/app_name" />
-        <activity
-            android:name="com.facebook.CustomTabActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="@string/fb_login_protocol_scheme" />
-            </intent-filter>
-        </activity>
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
-
         <activity
             android:name=".activities.LoginActivity"
             android:theme="@style/AppTheme.FullScreen"
-            android:windowSoftInputMode="adjustResize"
+            android:windowSoftInputMode="adjustResize|stateHidden"
             android:screenOrientation="nosensor">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -93,3 +75,23 @@
             android:resource="@array/preloaded_fonts" />
     </application>
 </manifest>
+
+                        <!--****************FACEBOOK IMPLEMENTATION******************-->
+
+    <!--<activity android:name="com.facebook.FacebookActivity"-->
+    <!--android:configChanges=-->
+    <!--"keyboard|keyboardHidden|screenLayout|screenSize|orientation"-->
+    <!--android:label="@string/app_name" />-->
+    <!--<activity-->
+    <!--android:name="com.facebook.CustomTabActivity"-->
+    <!--android:exported="true">-->
+    <!--<intent-filter>-->
+    <!--<action android:name="android.intent.action.VIEW" />-->
+    <!--<category android:name="android.intent.category.DEFAULT" />-->
+    <!--<category android:name="android.intent.category.BROWSABLE" />-->
+    <!--<data android:scheme="@string/fb_login_protocol_scheme" />-->
+    <!--</intent-filter>-->
+    <!--</activity>-->
+
+    <!--<meta-data android:name="com.facebook.sdk.ApplicationId"-->
+    <!--android:value="@string/facebook_app_id"/>-->
