--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,8 +48,6 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
-
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
@@ -58,9 +56,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$RETROFIT_VERSION"
     implementation "com.squareup.okhttp3:okhttp:$OK_HTTP_VERSION"
     implementation "com.squareup.okhttp3:logging-interceptor:$OK_HTTP_VERSION"
-
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-
 
     //Glide
     implementation('com.github.bumptech.glide:glide:4.9.0') {
@@ -76,7 +71,7 @@ dependencies {
     // RxJava, RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
-
-    //facebook
-    implementation 'com.facebook.android:facebook-android-sdk:5.0.2'
+//
+//    //facebook
+//    implementation 'com.facebook.android:facebook-android-sdk:5.0.2'
 }
