--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'io.fabric'
 
-
 android {
     compileSdkVersion 28
     defaultConfig {
@@ -78,8 +77,6 @@ dependencies {
     //Fabric
     implementation 'com.google.firebase:firebase-core:17.0.1'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
-
-//
-//    //facebook
-//    implementation 'com.facebook.android:facebook-android-sdk:5.0.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
