--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.nitrr.ecell.esummit.ecellapp"
-        buildConfigField("String", "BASE_URL", "\"https://ecell.nitrr.ac.in/\"")
+
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -19,9 +19,10 @@ android {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
+            buildConfigField "String", "BASE_URL", "\"https://ecell.nitrr.ac.in/\""
+            buildConfigField "String", "BQUIZ_URL", "\"http://206.189.143.11:9000/bquiz/live/question/\""
         }
-
-
 
         debug {
             debuggable true
@@ -29,6 +30,9 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [usesCleartextTraffic:"true"]
+
+            buildConfigField "String", "BASE_URL", "\"https://ecell.nitrr.ac.in/\""
+            buildConfigField "String", "BQUIZ_URL", "\"http://206.189.143.11:9000/bquiz/live/question/\""
         }
     }
 
