--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,8 @@ android {
             manifestPlaceholders = [usesCleartextTraffic:"true"]
 
             buildConfigField "String", "BASE_URL", "\"https://ecell.nitrr.ac.in/\""
-            buildConfigField "String", "BQUIZ_URL", "\"wss://206.189.143.11:9000/bquiz/live/question/\""
+            buildConfigField "String", "BQUIZ_URL", "\"http://206.189.143.11:9000/\""
+            buildConfigField "String", "BQUIZ_SOCKET_URL", "\"ws://206.189.143.11:9000/bquiz/live/question/\""
         }
 
         debug {
@@ -33,7 +34,8 @@ android {
             manifestPlaceholders = [usesCleartextTraffic:"true"]
 
             buildConfigField "String", "BASE_URL", "\"https://ecell.nitrr.ac.in/\""
-            buildConfigField "String", "BQUIZ_URL", "\"wss://206.189.143.11:9000/bquiz/live/question/\""
+            buildConfigField "String", "BQUIZ_URL", "\"http://206.189.143.11:9000/\""
+            buildConfigField "String", "BQUIZ_SOCKET_URL", "\"ws://206.189.143.11:9000/bquiz/live/question/\""
         }
     }
 
@@ -94,11 +96,11 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
 
     //Fabric
-    implementation 'com.google.firebase:firebase-core:17.0.1'
+    implementation 'com.google.firebase:firebase-core:17.1.0'
     implementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
     //Firebase
-    implementation 'com.google.firebase:firebase-messaging:19.0.1'
+    implementation 'com.google.firebase:firebase-messaging:20.0.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
